...
            android:checkedButton="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_gender_label">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="match_parent"
                android:layout_height="@dimen/touch_target_min"
                android:text="@string/male"
                android:textColor="@color/text_primary"
                android:buttonTint="@color/sage_green"
                android:layout_marginVertical="@dimen/gender_option_spacing"
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/spacing_small"
                android:hint="@string/height">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_height"
                    style="@style/VibeHealth.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:text="175" />

...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/spacing_small"
                android:hint="@string/weight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_weight"
                    style="@style/VibeHealth.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:text="70" />

...
