...
            android:hint="@string/full_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_heading">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_full_name"
                style="@style/VibeHealth.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="50"
                tools:text="John Doe" />
...
